src-tauri/error_output_2.txt
    Checking elite_whisper v0.1.0 (D:\Personal\voiceapp\src-tauri)
warning: unused import: `Path`
 --> src\main.rs:6:17
  |
6 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::str::FromStr`
 --> src\main.rs:8:5
  |
8 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `Code`, `GlobalShortcutExt`, and `Modifiers`
   --> src\main.rs:205:36
    |
205 | use tauri_plugin_global_shortcut::{GlobalShortcutExt, ShortcutState, Code, Modifiers};
    |                                    ^^^^^^^^^^^^^^^^^                 ^^^^  ^^^^^^^^^

error[E0631]: type mismatch in closure arguments
   --> src\main.rs:221:18
    |
221 | ...  .with_handler(|app: &tauri::AppHandle, shortcut: &tauri_plugin_global_shortcut::Shortcut, event: &tauri_plugin_global_shortcut::ShortcutEvent| {
    |       ^^^^^^^^^^^^ -------------------------------------------------------------------------------------------------------------------------------- found signature defined here
    |       |
    |       expected due to this
    |
    = note: expected closure signature `for<'a, 'b> fn(&'a AppHandle, &'b Shortcut, ShortcutEvent) -> _`
               found closure signature `fn(&AppHandle, &Shortcut, &ShortcutEvent) -> _`
note: required by a bound in `tauri_plugin_global_shortcut::Builder::<R>::with_handler`
   --> C:\Users\Tapan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-plugin-global-shortcut-2.3.1\src\lib.rs:380:28
    |
380 |     pub fn with_handler<F: Fn(&AppHandle<R>, &Shortcut, ShortcutEvent) + Send + Sync + 'static>(
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Builder::<R>::with_handler`
help: consider adjusting the signature so it does not borrow its argument
    |
221 -                 .with_handler(|app: &tauri::AppHandle, shortcut: &tauri_plugin_global_shortcut::Shortcut, event: &tauri_plugin_global_shortcut::ShortcutEvent| {
221 +                 .with_handler(|app: &tauri::AppHandle, shortcut: &tauri_plugin_global_shortcut::Shortcut, event: tauri_plugin_global_shortcut::ShortcutEvent| {
    |

For more information about this error, try `rustc --explain E0631`.
warning: `elite_whisper` (bin "elite_whisper") generated 3 warnings
error: could not compile `elite_whisper` (bin "elite_whisper") due to 1 previous error; 3 warnings emitted
